# fraud_detection

./: README.md  app.py  pyproject.toml  run_requests.py
antifraud/: antifraud_stack.py
data/: house_pricing_data.csv
lambda/calculate_prediction/: Dockerfile  calculate_prediction_lambda.py  house_price_model.pkl
lambda/check_status/: check_status_lambda.py
lambda/generate_key/: generate_key_lambda.py
src/: generate_data.py  train_model.py
tests/unit/: test_antifraud_stack.py
